# libsf

libsf/: .autotools  .cproject  .gitignore  .project  .pydevproject  Makefile  Makefile.am  README  aclocal.m4  check_libsf.launch  config.status  configure  configure.ac
libsf/autom4te.cache/: output.0  output.1  output.2  (+5 more)
libsf/libsf-1.0/libsf/: Makefile.am
libsf/tests/: .gitignore  Makefile.am  Makefile.in  check_libsf.c  exec_all_test.py
libsf/tests/moreexample/: prova1.f  prova1.sf  prova1.size
libsf/tests/train/: cat0-Filtfunc.f  cat0-tran1-1-Filtfunc.f  cat0-tran1-3-Filtfunc.f  cat0-tran2-1-Filtfunc.f  cat0-tran2-2-Filtfunc.f  cat0-tran2-3-Filtfunc.f  cat0-tran3-2-Filtfunc.f  cat0-tran3-3-Filtfunc.f  cat0-tran4-3-Filtfunc.f  cat0-tran5-1-Filtfunc.f  cat0-tran5-2-Filtfunc.f  cat0-tran5-3.size  cat0-tran6-2-Filtfunc.f  cat0-tran8-2-Filtfunc.f  cat0-tran8-3-Filtfunc.f  centaur0-tran1-3-Filtfunc.f  centaur0-tran2-1-Filtfunc.f  centaur0-tran2-2-Filtfunc.f  centaur0-tran2-3-Filtfunc.f  centaur0-tran3-1-Filtfunc.f  centaur0-tran3-2-Filtfunc.f  centaur0-tran3-3-Filtfunc.f  centaur0-tran4-1-Filtfunc.f  centaur0-tran4-2-Filtfunc.f  centaur0-tran5-1-Filtfunc.f  centaur0-tran5-2-Filtfunc.f  centaur0-tran7-1-Filtfunc.f  centaur0-tran8-1-Filtfunc.f  centaur0-tran8-2-Filtfunc.f  david0-tran1-3-Filtfunc.f  david0-tran2-1-Filtfunc.f  david0-tran3-2-Filtfunc.f  david0-tran3-3-Filtfunc.f  david0-tran4-1-Filtfunc.f  david0-tran4-3-Filtfunc.f  david0-tran5-1-Filtfunc.f  david0-tran5-3-Filtfunc.f  david0-tran6-2-Filtfunc.f  david0-tran7-1-Filtfunc.f  david0-tran7-2-Filtfunc.f  (+109 more)
(+202 files in other folders)
